# lidar_sidewalks

./: .gitignore  README.md  compute_normals.json  config.py  pyproject.toml  requirements.txt
Notebooks/: 0 Data exploration.ipynb  0_1_Segmentation_modelling.ipynb  1 Carriageway classification.ipynb  1 model_class_experiments .ipynb  2 model_class_experiments .ipynb  2 multi city classification.ipynb  2_model_class_experiments.ipynb  3 addiitonal_features.ipynb  3_additional_features.ipynb  4_carriageway_focus.ipynb  5_DL_exploration.ipynb  6_segment_first_classify_second.ipynb  test.py
src/: carriageway_focus_utils.py  data_loader.py  geometry_baseline.py  helpers.py
src/classification/: rule_based.py
